--- a/src/app/shared/components/survival-game-resources/survival-game-resources.component.html
+++ b/src/app/shared/components/survival-game-resources/survival-game-resources.component.html
@@ -1,6 +1,8 @@
 <h2> These are your resources, use them wisely</h2>
 
 <div class="row">
-  <div class="col-6">You got {{ resources.food }} food.</div>
-  <div class="col-6">You got {{ resources.money }} money.</div>
+  <div class="col-md-3">You got {{ resources.food }} food.</div>
+  <div class="col-md-3">You got {{ resources.wood }} wood.</div>
+  <div class="col-md-3">You got {{ resources.health }} health.</div>
+  <div class="col-md-3">You got {{ resources.fire }} fire.</div>
 </div>
