Added some balance and more events

--- a/src/app/components/survival-game-hub/survival-game-hub.component.html
+++ b/src/app/components/survival-game-hub/survival-game-hub.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="gameState">
   <h1>{{ title }}</h1>
+  <h3>{{ subtitle }}</h3>
 
   <app-survival-game-actions [actions]="morningActions"
                              [disabled]="false"
