Added game-over mode

--- a/src/app/components/survival-game-event/survival-game-event.component.html
+++ b/src/app/components/survival-game-event/survival-game-event.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="gameState">
-  <h2>Dit is de eventpage {{eventType}}</h2>
+  <!-- TODO title depending on action... -->
 
   <app-survival-game-actions *ngIf="gameState.eventState.firstEvent"
                              [title]="gameState.eventState.firstEvent.title"
