--- a/src/app/components/survival-game-hub-night/survival-game-hub-night.component.html
+++ b/src/app/components/survival-game-hub-night/survival-game-hub-night.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="gameState">
   <h1>{{ title }}</h1>
+  <h2>{{ subtitle }}</h2>
 
   <app-survival-game-actions [actions]="actions"
                              [disabled]="false"
