css files fix and github build

--- a/src/app/components/survival-game-game-over/survival-game-game-over.component.html
+++ b/src/app/components/survival-game-game-over/survival-game-game-over.component.html
@@ -2,4 +2,4 @@
 <app-survival-game-actions [actions]="actions"
                            [disabled]="false"
                            [title]="'Do you want to try again?'"
-                           (actionClick)="onActionClick($event)"></app-survival-game-actions>
+                           (actionClick)="onActionClick()"></app-survival-game-actions>
